--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"  
+    "dev": "nodemon index.js"
   },
   "author": "Aashray Anand",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "mongoose": "^5.3.13",
     "nodemon": "^1.18.6",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
